--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=auth-service
 server.port=8082
 
 spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
+app.cors.allowedOrigins=http://localhost:5173
