feat: add media service to upload files

--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ server.port=8083
 spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
 
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+
+media.service.url=http://media-service:8084
