--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>vti.dtn</groupId>
+	<groupId>greenwich.chatapp</groupId>
 	<artifactId>api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>api-gateway</name>
