--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,23 @@ services:
     networks:
       - chatapp-network
 
+  minio:
+    build:
+      context: ./minio
+      dockerfile: Dockerfile
+    container_name: minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - ./minio/data:/data
+    restart: unless-stopped
+    networks:
+      - chatapp-network
+
   service-registry:
     build:
       context: ./service-registry
@@ -72,8 +89,26 @@ services:
     networks:
       - chatapp-network
 
-volumes:
-  mongo_data:
+  media-service:
+    build:
+      context: ./media-service
+      dockerfile: Dockerfile
+    container_name: media-service
+    ports:
+      - "8084:8084"
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      SERVER_PORT: 8084
+      MINIO_URL: http://minio:9000
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+      MINIO_BUCKET: chat-media
+    depends_on:
+      - minio
+      - service-registry
+    restart: unless-stopped
+    networks:
+      - chatapp-network
 
 networks:
   chatapp-network:
