--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,3 +3,10 @@ server.port=8762
 
 # eureka
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
+
+spring.cloud.gateway.server.webflux.forwarded.enabled=true
+spring.cloud.gateway.server.webflux.globalcors.add-to-simple-url-handler-mapping=true
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:4000
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,PATCH,DELETE,OPTIONS
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedHeaders=*
+spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowCredentials=true
