--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,10 +62,16 @@ services:
       context: ./auth-service
       dockerfile: Dockerfile
     container_name: auth-service
+#    expose:
+#      - "${AUTH_SERVICE_PORT}"
     ports:
       - "${AUTH_SERVICE_PORT}:8082"
     environment:
       SPRING_DATA_MONGODB_URI: mongodb://mongodb:27017/${MONGO_DB_NAME}
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
+      GITHUB_CLIENT_ID: ${GITHUB_CLIENT_ID}
+      GITHUB_CLIENT_SECRET: ${GITHUB_CLIENT_SECRET}
     depends_on:
       - mongodb
       - service-registry
@@ -78,6 +84,8 @@ services:
       context: ./chat-service
       dockerfile: Dockerfile
     container_name: chat-service
+#    expose:
+#      - "${CHAT_SERVICE_PORT}"
     ports:
       - "${CHAT_SERVICE_PORT}:8083"
     environment:
@@ -94,8 +102,8 @@ services:
       context: ./media-service
       dockerfile: Dockerfile
     container_name: media-service
-    ports:
-      - "8084:8084"
+    expose:
+      - "8084"
     environment:
       SPRING_PROFILES_ACTIVE: docker
       SERVER_PORT: 8084
