feat: add chat UI

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.security.oauth2.client.registration.github.scope=user:email,read:user
 app.oauth2.authorizedRedirectUris=http://localhost:4000/oauth2/redirect
 
 server.forward-headers-strategy=framework
+
+chat.service.url=http://chat-service:8083
+default.avatar.url=http://localhost:9000/chat-media/default-avatar.png
