--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.data.mongodb.uri=mongodb://localhost:27017/chatapp
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 
 media.service.url=http://media-service:8084
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
