--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,PATCH,DELETE,OPTIONS
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowCredentials=true
+spring.cloud.gateway.server.webflux.default-filters=DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
