--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -24,4 +24,5 @@ app.oauth2.authorizedRedirectUris=http://localhost:4000/oauth2/redirect
 server.forward-headers-strategy=framework
 
 chat.service.url=http://chat-service:8083
+media.service.url=http://media-service:8084
 default.avatar.url=http://localhost:9000/chat-media/default-avatar.png
