--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -147,6 +147,20 @@ services:
     networks:
       - chatapp-network
 
+  translation-service:
+    build:
+      context: ./translation-service
+      dockerfile: Dockerfile
+    container_name: translation-service
+    ports:
+      - "${TRANSLATION_SERVICE_PORT}:8086"
+    depends_on:
+      - service-registry
+    environment:
+      GOOGLE_TRANSLATE_API_KEY: ${GOOGLE_TRANSLATE_API_KEY}
+    restart: unless-stopped
+    networks:
+      - chatapp-network
 
 networks:
   chatapp-network:
