--- a/single-page-application/package.json
+++ b/single-page-application/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@heroicons/react": "^2.2.0",
     "@stomp/stompjs": "^7.2.0",
-    "agora-rtc-sdk-ng": "^4.24.0",
+    "agora-rtc-sdk-ng": "^4.23.0",
     "agora-rtm-sdk": "^2.2.2",
     "axios": "^1.11.0",
+    "emoji-mart": "^5.6.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.0",
