--- a/translation-service/src/main/resources/application.properties
+++ b/translation-service/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=translation-service
 
 server.port=8086
 
-google.translate.api-key=${GOOGLE_TRANSLATE_API_KEY}
+google.project-id=${GOOGLE_PROJECT_ID}
 
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
