--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -21,13 +21,18 @@
     "expo-font": "~14.0.10",
     "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "^17.0.10",
     "expo-random": "^14.0.1",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.560.0",
     "react": "19.1.0",
     "react-icons": "^5.5.0",
     "react-native": "0.81.5",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-heroicons": "^4.0.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
     "react-native-vector-icons": "^10.3.0",
     "sockjs-client": "^1.6.1"
   },
