--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -16,13 +16,16 @@
     "@react-navigation/native-stack": "^7.8.5",
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.13.2",
-    "expo": "~54.0.27",
+    "expo": "~54.0.30",
     "expo-auth-session": "^7.0.10",
+    "expo-av": "~16.0.8",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "^17.0.10",
     "expo-random": "^14.0.1",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.560.0",
     "react": "19.1.0",
@@ -32,7 +35,7 @@
     "react-native-heroicons": "^4.0.0",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "sockjs-client": "^1.6.1"
   },
