--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -17,6 +17,7 @@
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-audio": "^1.1.1",
     "expo-auth-session": "^7.0.10",
     "expo-av": "~16.0.8",
     "expo-file-system": "~19.0.21",
@@ -24,9 +25,11 @@
     "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "^17.0.10",
+    "expo-intent-launcher": "~13.0.8",
     "expo-random": "^14.0.1",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-video": "^3.0.15",
     "lucide-react-native": "^0.560.0",
     "react": "19.1.0",
     "react-icons": "^5.5.0",
