--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -20,11 +20,12 @@
     "expo-audio": "^1.1.1",
     "expo-auth-session": "^7.0.10",
     "expo-av": "~16.0.8",
+    "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
     "expo-image": "~3.0.11",
     "expo-image-manipulator": "~14.0.8",
-    "expo-image-picker": "^17.0.10",
+    "expo-image-picker": "~17.0.10",
     "expo-intent-launcher": "~13.0.8",
     "expo-random": "^14.0.1",
     "expo-sharing": "~14.0.8",
