feat: implement admin service with user management APIs, audit log retrieval, and authentication integration

--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -73,6 +73,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
+        <!-- CRC32 for deterministic Agora UID generation -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
