--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -10,3 +10,13 @@ media.service.url=http://media-service:8084
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.greenwich.chatapp.chatservice=DEBUG
+logging.level.org.springframework.web=WARN
+logging.level.org.springframework.data=WARN
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
+logging.file.name=logs/chat-service.log
+logging.file.max-size=10MB
+logging.file.max-history=10
