--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "expo-auth-session": "^7.0.10",
     "expo-av": "~16.0.8",
     "expo-clipboard": "^8.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.10",
@@ -31,11 +32,14 @@
     "expo-random": "^14.0.1",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "expo-video": "^3.0.15",
     "lucide-react-native": "^0.560.0",
     "react": "19.1.0",
     "react-icons": "^5.5.0",
     "react-native": "0.81.5",
+    "react-native-agora": "^4.5.3",
+    "react-native-config": "^1.6.1",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-heroicons": "^4.0.0",
     "react-native-safe-area-context": "^5.6.2",
