--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=api-gateway
 server.port=8762
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=springboot
 server.forward-headers-strategy=framework
 
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
@@ -12,4 +16,3 @@ spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowed
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedMethods=GET,POST,PUT,PATCH,DELETE,OPTIONS
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.server.webflux.globalcors.cors-configurations.[/**].allowCredentials=true
-spring.cloud.gateway.server.webflux.default-filters=DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
