--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_
 spring.security.oauth2.client.registration.github.redirect-uri=${app.backend-url}:8762/oauth2/callback/{registrationId}
 spring.security.oauth2.client.registration.github.scope=user:email,read:user
 
-app.oauth2.authorizedRedirectUris=${app.frontend-url}/oauth2/redirect
-
+app.oauth2.authorizedRedirectUris=${app.frontend-url}/oauth2/redirect,mychatapp://oauth2/redirect
+server.forward-headers-strategy=framework
 chat.service.url=http://chat-service:8083
 media.service.url=http://media-service:8084
 default.avatar.url=${app.backend-url}:9000/chat-media/default-avatar.png
