--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -14,13 +14,31 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "greenwich.chatapp.mobileapp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "mychatapp",
+              "host": "oauth2",
+              "path": "/redirect"
+            }
+          ],
+          "category": [
+            "BROWSABLE",
+            "DEFAULT"
+          ]
+        }
+      ],
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "greenwich.chatapp.mobileapp",
@@ -34,9 +52,13 @@
       [
         "expo-notifications",
         {
-          "sounds": ["./assets/call_ringtone.wav"]
+          "sounds": [
+            "./assets/call_ringtone.wav"
+          ]
         }
-      ]
+      ],
+      "expo-web-browser",
+      "expo-secure-store"
     ],
     "extra": {
       "eas": {
