--- a/media-service/src/main/resources/application.properties
+++ b/media-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8084
 eureka.client.service-url.defaultZone=http://service-registry:8761/eureka/
 spring.config.import=optional:configserver:http://config-service:8763
 
-minio.endpoint=https://minio:9000
+minio.endpoint=http://minio:9000
 minio.publicEndpoint=${app.backend-url}:9000
 minio.access-key=minioadmin
 minio.secret-key=minioadmin
